--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:prod": "vite build --mode production",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "deploy": "npm run build:prod && echo 'Build complete! Push to main branch to deploy to GitHub Pages.'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
