update index page using adding button CX Leaders Insight Hub

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "npm run build:prod && echo 'Build complete! Push to main branch to deploy to GitHub Pages.'"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -63,6 +64,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
